gts-macros/tests/compile_fail/traits_marked_not_jsonschema.stderr
error[E0277]: the trait bound `MarkedButNotJsonSchema: schemars::JsonSchema` is not satisfied
  --> tests/compile_fail/traits_marked_not_jsonschema.rs:12:12
   |
12 | pub struct MarkedButNotJsonSchema {
   |            ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `schemars::JsonSchema` is not implemented for `MarkedButNotJsonSchema`
  --> tests/compile_fail/traits_marked_not_jsonschema.rs:12:1
   |
12 | pub struct MarkedButNotJsonSchema {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `schemars::JsonSchema`:
             &'a T
             &'a mut T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required by a bound in `GtsTraitsSchema`
  --> $WORKSPACE/gts/src/schema_traits.rs
   |
   | pub trait GtsTraitsSchema: schemars::JsonSchema {}
   |                            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `GtsTraitsSchema`
   = note: `GtsTraitsSchema` is a "sealed trait", because to implement it you also need to implement `schemars::JsonSchema`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             gts::GtsInstanceId
             gts::GtsTypeId
             [T; 0]
             [T; 1]
             [T; 2]
             [T; 3]
             [T; 4]
             [T; 5]
           and $N others
